@@ -74,7 +74,8 @@ public slots:
     void display() {}
     void clearBackForwardList();
     void dumpTitleChanges() { m_dumpTitleChanges = true; }
-
+    QString encodeHostName(const QString &host);
+    QString decodeHostName(const QString &host);
 private:
     bool m_isLoading;
     bool m_textDump;
